# VocalAnalyzer

./: .gitignore  Cargo.toml  README.md  VocalAnalyzer.unitypackage  VoiceAnalyzer.py  VoiceAnalyzer.unitypackage  requirements.txt  voice_osc_gui.py
.github/workflows/: release.yml  test.yml
Assets/VoiceAnalyzer/Animation/FormantMonitor/: FM_Disabler.anim  (+11 more)
Assets/VoiceAnalyzer/Material/: FormantMonitorDisplay.mat  FormantMonitorUpdate.mat  PitchMonitorDisplay.mat  PitchMonitorLabel_hiC.mat  PitchMonitorUpdate.mat  SpectrogramLabel.mat
Assets/VoiceAnalyzer/Prefab/: FormantMonitor.prefab  PitchMonitor.prefab  Spectrogram.prefab
VoiceAnalyzer/Animation/FormantMonitor/: FM_CameraDisabler.anim  FM_CameraEnabler.anim  FM_F4_L.anim  FM_G1.anim
VoiceAnalyzer/Animation/PitchMonitor/: PMCameraDisabler.anim  PM_FT_H.anim
VoiceAnalyzer/Animation/Spectrogram/: S_FT_H.anim  S_FT_L.anim  S_G1.anim  S_G11.anim  S_G12.anim  S_G13.anim  S_G15.anim  S_G18.anim  S_G19.anim  S_G2.anim  S_G20.anim  S_G3.anim  S_G4.anim  S_G5.anim  S_G8.anim  Spectrogram.controller
VoiceAnalyzer/Material/: PitchMonitorLabel_hiC.mat  SpectrogramDisplay.mat  SpectrogramLabel.mat  SpectrogramUpdate.mat
VoiceAnalyzer/Material/Shader/: FormantMonitor.shader  GrabPassShader.shader  PitchScrollShader.shader
VoiceAnalyzer/Material/Texture/: RT_FormantMonitor.renderTexture  RT_Pitch.renderTexture  RT_Spectrogram.renderTexture
VoiceAnalyzer/Prefab/: FormantMonitor.prefab  PitchMonitor.prefab  Spectrogram.prefab
src/: analyzer.rs  app.rs  main.rs  osc.rs  sound_device.rs  timer.rs  utils.rs
(+26 files in other folders)
