[package]
name = "voice_analyzer"
version = "0.1.1"
edition = "2021"

[dependencies]
apodize = "1.0.0"
eframe = "0.32.0"
egui_extras = { version = "0.32.0", features = ["svg"] }
egui_plot = "0.33.0"
linear-predictive-coding = "0.4.0"
ndarray = "0.16.1"
pitch-detection = "0.3.0"
rosc = "0.11.4"
rpoly = "0.2.9"
rustfft = "6.4.0"
wasapi = "0.19.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
